[package]
name = "qubit-codec-misc"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
autotests = false
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-codec-misc"
description = "Miscellaneous byte and text format codecs for Rust applications"
homepage = "https://github.com/qubit-ltd/rs-codec-misc"
documentation = "https://docs.rs/qubit-codec-misc"
readme = "README.md"
keywords = ["codec", "hex", "base64", "percent", "qubit"]
categories = ["encoding", "parser-implementations"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README.zh_CN.md",
    "/RUST_CODING_STYLE.md",
    "/RUST_CODING_STYLE.zh_CN.md",
    "/doc/**/user_guide*.md",
    "/examples/**",
    "/resources/**",
    "/src/**",
    "/tests/**",
]

[dependencies]
base64 = "0.22"
qubit-codec = "0.5.0"
thiserror = "2.0"

[[test]]
name = "tests"
path = "tests/mod.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
